test/tests/compiler/9_functions/valid/libraries/addition_client.plx
pub fn add(x: i32, y: i32) i32;

pub fn main(none) i32 {
    return add(true, 2)
}
