test/tests/compiler/9_functions/invalid_parse/plx1_function_empty_block.plx
pub fn foo(x: i32, y: i32) i32 {
}

pub fn main(none) i32 {
    return 0
}
